syntax = "proto3";

package product;

option go_package = "/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Product {
    int32 id = 1;
    string name = 2;
    double price = 3;
    int32 stock = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message ProductId {
    int32 id = 1;
}

message ResponseStringProduct {
    string message = 1;
}

service ProductService {
    rpc Create(Product) returns (ResponseStringProduct);
    rpc GetOne(ProductId) returns (Product);
    rpc Update(Product) returns (ResponseStringProduct);
    rpc Delete(ProductId) returns (ResponseStringProduct);
    rpc GetAll(google.protobuf.Empty) returns (stream Product);
}